--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,6 +219,18 @@ footer {
     color: aqua;
     font-family:fantasy;
 }
+@keyframes rotalogo {
+    from {
+      transform: rotate(0deg); }
+    to {
+      transform: rotate(360deg); } }
+  
+#logo {
+    animation-name: rotalogo;
+    animation-duration: 2s; }
+main div img:hover {
+        transform: scale(1.2, 1.2);
+        transition: 1.6s; }
 @media screen and (max-width:375px){
     .fotosGaleria{
         column-count: 1;
