--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,6 +256,14 @@ main div img:hover {
     .imagenProductos{
         max-width: 500px;
         max-height: 500px;
-
-
+    }
+    .btn-primary{
+        background-color: var(--principal);
+        color: var(--secondary);
+    }
+    .card-title{
+        font-size: var(--text-lg);
+    }
+    .card-text{
+        font-size: var(--text-md);
     }
