--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
 @import './misc/variables';
 @import './misc/normalize';
 @import './misc/mixins';
-@import './misc/normalize';
+@import './misc/animations';
 /* PARTIALS */
 @import './partials/header';
 @import './partials/footer';
