sass a todas las paginas del proyecto

--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -13,7 +13,7 @@
     display: grid;
     height: 100vh;
     width: 100vw;
-    background-image: url(../image/portada.png);
+    background-image: url(../public/image/portada.png);
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: center;
