--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,11 @@
 /* ----- globals ----- */
 html {
   font-size: 62.5%;
-  font-family: var(font-primary);
-  color: var(secondary); }
+  font-family: var(--font-primary);
+  color: var(--secondary); }
 
 body {
-  color: var(secondary); }
+  color: var(--secondary); }
 
 h1 {
   font-size: 5em; }
@@ -44,37 +44,19 @@ a {
   max-width: 1080px;
   margin: 0 auto; }
 
-/* ----- resert ----- */
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
+@keyframes rotalogo {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
 
-/* ----- globals ----- */
-html {
-  font-size: 62.5%;
-  font-family: var(font-primary);
-  color: var(secondary); }
+#logo {
+  animation-name: rotalogo;
+  animation-duration: 2s; }
 
-body {
-  color: var(secondary); }
-
-h1 {
-  font-size: 5em; }
-
-p {
-  font-size: 2em; }
-
-ul {
-  list-style-type: none;
-  font-size: 1.5em; }
-
-a {
-  text-decoration: none;
-  color: inherit;
-  display: inline-block; }
+main div img:hover {
+  transform: scale(1.2, 1.2);
+  transition: 1.6s; }
 
 /* PARTIALS */
 header {
@@ -100,9 +82,9 @@ header {
   flex-basis: 40%;
   justify-content: space-between; }
   .menu__item {
-    border: 2px solid var(principal); }
+    border: 2px solid var(--principal); }
   .menu:hover {
-    border: 2px solid var(secondary); }
+    border: 2px solid var(--secondary); }
   .menu .menu__link {
     font-size: var(--text-md);
     padding: 1rem; }
@@ -141,7 +123,7 @@ footer {
   display: grid;
   height: 100vh;
   width: 100vw;
-  background-image: url(../image/portada.png);
+  background-image: url(../public/image/portada.png);
   background-repeat: no-repeat;
   background-size: cover;
   justify-content: center;
@@ -225,6 +207,12 @@ section div {
 .imagenProductos {
   max-width: 500px;
   max-height: 500px; }
+
+.carousel-inner {
+  margin: auto; }
+
+.carousel-item {
+  margin: auto; }
 
 .btn-primary {
   background-color: var(principal);
