--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -1,8 +1,16 @@
-:root{
-    $principal: rgb(87, 37, 2);
-    $secondary: aqua; 
-    $font-primary: "Bebas Neue";
-    $font-secondary: "Hubballi";
-    $text-lg: 2em;
-    $text-md: 1.6em;
-}
+$principal: rgb(87, 37, 2);
+$secondary: aqua; 
+$font-primary: "Bebas Neue";
+$font-secondary: "Hubballi";
+$text-lg: 2em;
+$text-md: 1.6em;
+
+
+$margins:(
+    xlarge: 5rem,
+    large: 3rem,
+    medium: 2rem,
+    small: 1.5rem,
+    xsmall: 1rem
+);
+
