--- a/css/main.css
+++ b/css/main.css
@@ -96,10 +96,6 @@ header {
     font-size: var(--text-md);
     padding: 1rem; }
 
-@media screen and (max-width: 375px) {
-  header {
-    width: 100%; } }
-
 footer {
   background-image: linear-gradient(#572502, #351600);
   grid-area: footer;
@@ -135,18 +131,19 @@ footer {
   background-size: cover;
   justify-content: center;
   align-items: center;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "sectionOne sectionTwo";
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+  grid-template-areas: "sectionOne";
   grid-column-gap: 1rem;
   justify-items: center; }
 
 .sectionOne {
   grid-area: sectionOne;
   grid-column: 1;
+  grid-row: 1;
   position: relative;
-  width: 60%;
-  height: 60%;
+  width: 80%;
+  height: 80%;
   background-color: #572502;
   color: aqua; }
 
@@ -173,22 +170,9 @@ section div {
   padding-top: 20px; }
 
 .sectionTwo {
-  grid-area: sectionTwo;
-  grid-column: 2;
-  width: 60%;
-  height: 60%; }
-
-.alfajoresIndex {
-  height: 100%;
-  width: 100%; }
-
-@media screen and (max-width: 375px) {
-  .sectionTwo {
-    height: auto;
-    width: auto; }
-  .sectionOne {
-    height: 1fr;
-    width: auto; } }
+  display: none;
+  height: 0;
+  width: 0; }
 
 main .formContacto {
   padding: 2rem; }
@@ -209,11 +193,6 @@ main .formContacto {
   width: 100%;
   column-count: 2; }
 
-@media screen and (max-width: 375px) {
-  .fotosGaleria {
-    column-count: 1;
-    margin: 0; } }
-
 .imagenProductos {
   max-width: 500px;
   max-height: 500px; }
@@ -224,6 +203,9 @@ main .formContacto {
 .carousel-item {
   margin: auto; }
 
+#mainNosotros {
+  height: 100vh; }
+
 .btn-primary {
   background-color: #572502;
   color: aqua; }
@@ -233,3 +215,50 @@ main .formContacto {
 
 .card-text {
   font-size: var(--text-md); }
+
+/* MEDIAS */
+@media screen and (max-width: 360px) {
+  body {
+    width: 1fr;
+    min-height: 100vh; }
+  header {
+    width: 100%;
+    margin: 0;
+    padding: 0; }
+    header .navbar {
+      width: 60%; }
+      header .navbar .menu {
+        align-content: space-between;
+        gap: 0; }
+      header .navbar ul {
+        font-size: xx-small; }
+  .fotosGaleria {
+    column-count: 1;
+    margin: 0;
+    margin: 5px; }
+    .fotosGaleria img {
+      max-width: 300px; }
+  p {
+    font-size: small; }
+  #bodyIndex {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 30vh 1fr 30vh;
+    grid-template-areas: "header" "main" "footer"; }
+    #bodyIndex #mainIndex {
+      grid-area: main; }
+    #bodyIndex footer {
+      grid-area: footer; }
+    #bodyIndex header {
+      grid-area: header; }
+  #bodyGaleria {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 30vh 1fr 30vh;
+    grid-template-areas: "header" "main" "footer"; }
+    #bodyGaleria #mainGaleria {
+      grid-area: main; }
+    #bodyGaleria footer {
+      grid-area: footer; }
+    #bodyGaleria header {
+      grid-area: header; } }
