--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -19,19 +19,20 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
     grid-template-areas:
-        "sectionOne sectionTwo";
+        "sectionOne";
     grid-column-gap: 1rem;
     justify-items: center;
 }
 .sectionOne {
     grid-area: sectionOne;
     grid-column: 1;
+    grid-row: 1;
     position: relative;
-    width: 60%;
-    height: 60%;
+    width: 80%;
+    height: 80%;
     background-color: rgb(87, 37, 2);
     color: aqua;
 }
@@ -60,22 +61,8 @@ section {
     padding-top: 20px;
 }
 .sectionTwo {
-    grid-area: sectionTwo;
-    grid-column: 2;
-    width: 60%;
-    height: 60%;
+    display: none;
+    height: 0;
+    width: 0;
 }
-.alfajoresIndex {
-    height: 100%;
-    width: 100%;
-}
-@media screen and (max-width:375px) {
-    .sectionTwo {
-        height: auto;
-        width: auto;
-    }
-    .sectionOne {
-        height: 1fr;
-        width: auto;
-    }
-}
+
