--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 /* ----- imports ----- */
 /* MICELANEOUS */
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hubballi&display=swap');
 @import './misc/variables';
 @import './misc/normalize';
