--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* ----- imports ----- */
 /* MICELANEOUS */
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hubballi&display=swap");
 /* ----- resert ----- */
 *,
@@ -12,11 +13,11 @@
 /* ----- globals ----- */
 html {
   font-size: 62.5%;
-  font-family: var(--font-primary);
-  color: var(--secondary); }
+  font-family: "Bebas Neue";
+  color: #ffccd2; }
 
 body {
-  color: var(--secondary); }
+  color: #ffccd2; }
 
 h1 {
   font-size: 5em; }
@@ -33,16 +34,9 @@ a {
   color: inherit;
   display: inline-block; }
 
-.flex-row {
-  display: flex; }
-
-.flex-column {
-  display: flex;
-  flex-direction: column; }
-
-.container {
-  max-width: 1080px;
-  margin: 0 auto; }
+main {
+  background-image: url(../public/image/fondoTortas.jpg);
+  background-size: cover; }
 
 @keyframes rotalogo {
   from {
@@ -55,16 +49,17 @@ a {
   animation-duration: 2s; }
 
 main div img:hover {
-  transform: scale(1.2, 1.2);
+  transform: scale(1.2);
   transition: 1.6s; }
 
 /* PARTIALS */
 header {
   grid-area: header;
-  grid-column: 1/5;
+  grid-column: 1;
   grid-row: 1;
-  background-image: linear-gradient(#351600, #572502);
-  text-align: center; }
+  background-color: #582805;
+  text-align: center;
+  color: white; }
 
 .navbar {
   min-height: 10vh;
@@ -86,46 +81,65 @@ header {
   align-items: center;
   gap: 2rem;
   justify-content: space-between; }
-  .menu__item, .menu__item--active {
-    border: 2px solid var(--principal); }
-    .menu__item--active {
-      background-color: aqua; }
-  .menu:hover {
-    border: 2px solid var(--secondary); }
-  .menu .menu__link {
-    font-size: var(--text-md);
+  .menuItem, .menuItem--active {
+    border: none; }
+    .menuItem--active {
+      background-color: white;
+      color: chocolate; }
+  .menu .menuLink {
+    font-size: 1em;
     padding: 1rem; }
+    .menu .menuLink:hover {
+      border: #ffccd2;
+      color: white;
+      background-color: chocolate; }
+
+.flex-row {
+  display: flex; }
+
+.flex-column {
+  display: flex;
+  flex-direction: column; }
+
+.container {
+  max-width: 1080px;
+  margin: 0 auto; }
 
 footer {
-  background-image: linear-gradient(#572502, #351600);
+  background-color: #582805;
   grid-area: footer;
-  width: 100vw; }
+  width: 100%;
+  color: white; }
 
 .copyright {
   text-align: left;
-  color: #a01010;
   font-family: Times;
-  font-style: italic; }
+  font-style: italic;
+  font-size: 1.6em; }
 
 .redes {
   position: relative;
   text-align: right;
-  color: aqua;
-  font-family: fantasy; }
+  background-color: transparent;
+  margin-right: 5%;
+  padding-top: 5%; }
+
+.copyright {
+  margin-bottom: 0; }
 
 /* VIEWS */
 #bodyIndex {
   display: grid;
   min-height: 100vh;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: 15vh 1fr 15vh;
-  grid-template-areas: "header header header header" "mainIndex mainIndex mainIndex mainIndex" "footer footer footer footer"; }
+  grid-template-areas: "header"  "mainIndex" "footer"; }
 
 #mainIndex {
   grid-area: mainIndex;
   display: grid;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-image: url(../public/image/portada.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -137,6 +151,86 @@ footer {
   grid-column-gap: 1rem;
   justify-items: center; }
 
+#mainContacto {
+  background-image: url(../public/image/fondoTortas.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  font-weight: 400;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  margin: 0; }
+  #mainContacto .divContacto {
+    margin: 5%;
+    margin-left: 25%;
+    margin-right: 25%;
+    background-color: #582805;
+    padding: 5%;
+    box-shadow: 7px 13px 37px #000;
+    width: 50%; }
+  #mainContacto .formContacto {
+    padding: 2rem; }
+    #mainContacto .formContacto .margenesContacto {
+      margin-right: 80%; }
+  #mainContacto form textarea {
+    width: 100%; }
+
+.galeria {
+  font-family: cursive; }
+  .galeria h1 {
+    text-align: center;
+    font-weight: 300;
+    padding-top: 5%;
+    color: #000; }
+  .galeria .lineaGaleria {
+    border-top: 5px solid black;
+    width: 90%;
+    margin: 5%; }
+
+.fotosGaleria {
+  display: flex;
+  margin: 5% 10%;
+  width: 90%;
+  margin: auto;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  border-radius: 3px; }
+  .fotosGaleria .imgTodasGal {
+    width: 32%;
+    position: relative;
+    margin-bottom: 5%;
+    box-shadow: 7px 13px 37px #000;
+    overflow: hidden; }
+    .fotosGaleria .imgTodasGal img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+
+.imagenProductos {
+  max-width: 500px; }
+
+#bodyNosotros {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: 15vh 1fr 15vh;
+  grid-template-areas: "header"  "mainNosotros" "footer"; }
+
+#mainNosotros {
+  grid-area: mainNosotros;
+  display: grid;
+  height: 100vh;
+  width: 100%;
+  background-image: url(../public/image/portadaMadera.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 100%;
+  grid-template-rows: 50% 50%;
+  grid-template-areas: "sectionOne" "sectiontwo";
+  grid-column-gap: 1rem;
+  justify-items: center; }
+
 .sectionOne {
   grid-area: sectionOne;
   grid-column: 1;
@@ -144,8 +238,41 @@ footer {
   position: relative;
   width: 80%;
   height: 80%;
-  background-color: #572502;
-  color: aqua; }
+  background-color: #582805;
+  color: white;
+  font-weight: 400;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  box-shadow: 7px 13px 37px #000; }
+
+.sectionTwo {
+  grid-area: sectionTwo;
+  grid-column: 1;
+  grid-row: 2;
+  position: relative;
+  width: 80%;
+  display: grid;
+  align-content: space-between;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+  grid-template-areas: "imgPast2 imgManga" "imgPast3 imgPast4"; }
+
+.imgNosotros {
+  display: contents;
+  width: 100%;
+  margin: auto;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  border-radius: 3px; }
+  .imgNosotros .imgTodasNos {
+    width: 25%;
+    position: relative;
+    margin-bottom: 5%;
+    box-shadow: 7px 13px 37px #000;
+    overflow: hidden; }
+    .imgNosotros .imgTodasNos img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
 
 section article {
   display: inline-block;
@@ -159,67 +286,80 @@ section div {
 
 .tituloPrincipal {
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #572502;
-  background-color: aqua;
+  font-family: cursive,Arial, Helvetica, sans-serif;
+  color: white;
+  background-color: #ffccd2;
   margin-right: 5%;
   margin-left: 5%; }
 
 .textoPrincipal {
   text-align: left;
-  padding-top: 20px; }
+  padding: 20px;
+  font-family: 'Indie Flower', cursive; }
 
-.sectionTwo {
-  display: none;
-  height: 0;
-  width: 0; }
+#imgpast2 {
+  grid-area: imgpast2;
+  grid-column: 1;
+  grid-row: 1; }
 
-main .formContacto {
-  padding: 2rem; }
+#imgManga {
+  grid-area: imgManga;
+  grid-column: 2;
+  grid-row: 1; }
 
-#bodyGaleria {
-  display: grid;
-  min-height: 100vh;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 15vh 1fr 15vh;
-  grid-template-areas: "header header header header" "mainGaleria mainGaleria mainGaleria mainGaleria" "footer footer footer footer"; }
+#imgPast3 {
+  grid-area: imgPast3;
+  grid-column: 1;
+  grid-row: 2; }
 
-#mainGaleria {
-  grid-area: mainGaleria; }
+#imgPast4 {
+  grid-area: imgpast4;
+  grid-column: 2;
+  grid-row: 2; }
 
-.fotosGaleria {
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 100%;
-  column-count: 2; }
-
-.imagenProductos {
-  max-width: 500px;
-  max-height: 500px; }
-
-.carousel-inner {
-  margin: auto; }
-
-.carousel-item {
-  margin: auto; }
-
-#mainNosotros {
-  height: 100vh; }
-
-.btn-primary {
-  background-color: #572502;
-  color: aqua; }
-
-.card-title {
-  font-size: var(--text-lg); }
-
-.card-text {
-  font-size: var(--text-md); }
+.card {
+  width: 20rem;
+  overflow: hidden; }
+  .card .btn-primary {
+    background-color: #582805;
+    color: #ffccd2; }
+  .card .card-title {
+    font-size: 2em; }
+  .card .card-text {
+    font-size: 1.6em; }
 
 /* MEDIAS */
-@media screen and (max-width: 360px) {
+/*PANTALLAS MEDIANAS*/
+@media screen and (max-width: 760PX) {
+  p {
+    font-size: medium; }
+  .tituloPrincipal {
+    font-size: 3em; }
+  .fotosGaleria {
+    column-count: 1; }
+    .fotosGaleria .imgTodasGal {
+      width: 48%;
+      position: relative;
+      margin-bottom: 5px;
+      box-shadow: 7px 13px 37px #000; }
+      .fotosGaleria .imgTodasGal img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+  .imgNosotros {
+    column-count: 1; }
+    .imgNosotros .imgTodasNos {
+      width: 48%;
+      position: relative;
+      margin-bottom: 5px; }
+      .imgNosotros .imgTodasNos img {
+        width: 100%;
+        object-fit: cover; } }
+
+/*PANTALLAS CHICAS*/
+@media screen and (max-width: 520px) {
   body {
-    width: 1fr;
+    width: 100%;
     min-height: 100vh; }
   header {
     width: 100%;
@@ -233,11 +373,16 @@ main .formContacto {
       header .navbar ul {
         font-size: xx-small; }
   .fotosGaleria {
-    column-count: 1;
-    margin: 0;
-    margin: 5px; }
+    column-count: 1; }
+    .fotosGaleria .imgTodasGal {
+      width: 96%;
+      position: relative;
+      margin-bottom: 5px;
+      box-shadow: 7px 13px 37px #000; }
     .fotosGaleria img {
-      max-width: 300px; }
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
   p {
     font-size: small; }
   #bodyIndex {
