--- a/sass/medias/_media.scss
+++ b/sass/medias/_media.scss
@@ -1,6 +1,47 @@
-@media screen and (max-width: 360px) {
+/*PANTALLAS MEDIANAS*/
+@media screen and (max-width: 760PX) {
+    p {
+        font-size: medium;
+    }
+
+    .tituloPrincipal {
+        font-size: 3em;
+    }
+
+    .fotosGaleria {
+        column-count: 1;
+
+        .imgTodasGal {
+            width: 48%;
+            position: relative;
+            margin-bottom: 5px;
+            box-shadow: 7px 13px 37px #000;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+    .imgNosotros {
+        column-count: 1;
+        .imgTodasNos{
+            width: 48%;
+            position: relative;
+            margin-bottom: 5px;
+            img {
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+/*PANTALLAS CHICAS*/
+@media screen and (max-width: 520px) {
     body {
-        width: 1fr;
+        width: 100%;
         min-height: 100vh;
     }
 
@@ -25,11 +66,18 @@
 
     .fotosGaleria {
         column-count: 1;
-        margin: 0;
-        margin: 5px;
+
+        .imgTodasGal {
+            width: 96%;
+            position: relative;
+            margin-bottom: 5px;
+            box-shadow: 7px 13px 37px #000;
+        }
 
         img {
-            max-width: 300px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 
