--- a/sass/misc/_animations.scss
+++ b/sass/misc/_animations.scss
@@ -12,6 +12,6 @@
     animation-duration: 2s;
 }
 main div img:hover {
-    transform: scale(1.2, 1.2);
+    transform: scale(1.2);
     transition: 1.6s;
 }
