--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -1,9 +1,10 @@
-$principal: rgb(87, 37, 2);
-$secondary: aqua; 
+$principal: #582805;
+$secondary: rgb(255, 204, 210); 
 $font-primary: "Bebas Neue";
 $font-secondary: "Hubballi";
 $text-lg: 2em;
 $text-md: 1.6em;
+$text-sm: 1em;
 
 
 $margins:(
