--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,17 +1,22 @@
 footer {
-    background-image: linear-gradient(rgb(87, 37, 2), rgb(53, 22, 0));
+    background-color: $principal;
     grid-area: footer;
-    width: 100vw;    
+    width: 100%;  
+    color: white;  
 }
 .copyright {
     text-align: left;
-    color: rgb(160, 16, 16);
     font-family: Times;
     font-style: italic;
+    font-size: $text-md;
 }
 .redes {
     position: relative;
     text-align: right;
-    color: aqua;
-    font-family:fantasy;
+    background-color: transparent;
+    margin-right: 5%;
+    padding-top: 5%;
+}
+.copyright {
+    margin-bottom: 0;
 }
