--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -2,18 +2,18 @@
 #bodyIndex {
     display: grid;
     min-height: 100vh;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr;
     grid-template-rows: 15vh 1fr 15vh;
     grid-template-areas:
-        "header header header header"
-        "mainIndex mainIndex mainIndex mainIndex"
-        "footer footer footer footer";
+        "header" 
+        "mainIndex"
+        "footer";
 }
 #mainIndex {
     grid-area: mainIndex;
     display: grid;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-image: url(../public/image/portada.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,43 +26,5 @@
     grid-column-gap: 1rem;
     justify-items: center;
 }
-.sectionOne {
-    grid-area: sectionOne;
-    grid-column: 1;
-    grid-row: 1;
-    position: relative;
-    width: 80%;
-    height: 80%;
-    background-color: rgb(87, 37, 2);
-    color: aqua;
-}
-section {
-    article {
-        display: inline-block;
-        text-align: left;
-        margin-left: 10px;
-    }
-    div {
-        display: inline-block;
-        text-align: right;
-        margin-right: 10px;
-    }
-}
-.tituloPrincipal {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(87, 37, 2);
-    background-color: aqua;
-    margin-right: 5%;
-    margin-left: 5%
-}
-.textoPrincipal {
-    text-align: left;
-    padding-top: 20px;
-}
-.sectionTwo {
-    display: none;
-    height: 0;
-    width: 0;
-}
+
 
