--- a/sass/views/_nosotros.scss
+++ b/sass/views/_nosotros.scss
@@ -1,13 +1,124 @@
 .imagenProductos{
     max-width: 500px;
-    max-height: 500px;
 }
-.carousel-inner{
-    margin: auto;
-}
-.carousel-item{
-    margin: auto;
+#bodyNosotros {
+    display: grid;
+    min-height: 100vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 15vh 1fr 15vh;
+    grid-template-areas:
+        "header" 
+        "mainNosotros"
+        "footer";
 }
 #mainNosotros{
+    grid-area: mainNosotros;
+    display: grid;
     height: 100vh;
+    width: 100%;
+    background-image: url(../public/image/portadaMadera.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 100%;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+        "sectionOne"
+        "sectiontwo";
+    grid-column-gap: 1rem;
+    justify-items: center;
+}
+.sectionOne {
+    grid-area: sectionOne;
+    grid-column: 1;
+    grid-row: 1;
+    position: relative;
+    width: 80%;
+    height: 80%;
+    background-color: $principal;
+    color: white;
+    font-weight: 400;
+    text-shadow: black 0.1em 0.1em 0.2em;
+    box-shadow: 7px 13px 37px #000;
+}
+.sectionTwo {
+    grid-area: sectionTwo;
+    grid-column: 1;
+    grid-row: 2;
+    position: relative;
+    width: 80%;
+    display: grid;
+    align-content: space-between;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    grid-template-areas:
+        "imgPast2 imgManga"
+        "imgPast3 imgPast4";
+}
+.imgNosotros {
+    display: contents;
+    width: 100%;
+    margin: auto;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-radius: 3px;
+
+    .imgTodasNos{
+        width: 25%;
+        position: relative;
+        margin-bottom: 5%;
+        box-shadow: 7px 13px 37px #000;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+section {
+    article {
+        display: inline-block;
+        text-align: left;
+        margin-left: 10px;
+    }
+    div {
+        display: inline-block;
+        text-align: right;
+        margin-right: 10px;
+    }
+}
+.tituloPrincipal {
+    text-align: center;
+    font-family: cursive,Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: $secondary;
+    margin-right: 5%;
+    margin-left: 5%
+}
+.textoPrincipal {
+    text-align: left;
+    padding: 20px;
+    font-family: 'Indie Flower', cursive;
+}
+#imgpast2{
+    grid-area: imgpast2;
+    grid-column: 1;
+    grid-row: 1;
+}
+#imgManga{
+    grid-area: imgManga;
+    grid-column: 2;
+    grid-row: 1;
+}
+#imgPast3{
+    grid-area: imgPast3;
+    grid-column: 1;
+    grid-row: 2;
+}
+#imgPast4{
+    grid-area: imgpast4;
+    grid-column: 2;
+    grid-row: 2;
 }
