--- a/sass/misc/_normalize.scss
+++ b/sass/misc/_normalize.scss
@@ -31,6 +31,6 @@ a {
     display: inline-block;
 }
 main{
-    background-image: url(../public/image/fondoTortas.jpg);
-    background-size: cover;
+    background-image: url(../public/image/fondoSol5.png);
+    background-repeat: repeat;
 }
