--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -1,7 +1,7 @@
 $principal: #582805;
-$secondary: rgb(255, 204, 210); 
-$font-primary: "Bebas Neue";
-$font-secondary: "Hubballi";
+$secondary: #ffccd2; 
+$font-primary: cursive,Arial;
+$font-secondary: 'Indie Flower', cursive;
 $text-lg: 2em;
 $text-md: 1.6em;
 $text-sm: 1em;
