--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -15,7 +15,7 @@ footer {
     text-align: right;
     background-color: transparent;
     margin-right: 5%;
-    padding-top: 5%;
+    /*padding-top: 5%;*/
 }
 .copyright {
     margin-bottom: 0;
