--- a/sass/views/_contacto.scss
+++ b/sass/views/_contacto.scss
@@ -1,12 +1,16 @@
 #mainContacto {
-  background-image: url(../public/image/fondoTortas.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  font-family: $font-primary;
   color: white;
   font-weight: 400;
   text-shadow: black 0.1em 0.1em 0.2em;
   margin: 0;
-  .divContacto{
+  button, input, optgroup, select, textarea {
+    background-color: $secondary;
+  }
+  form textarea, input {
+    width: 100%;
+  }
+  .divContacto {
     margin: 5%;
     margin-left: 25%;
     margin-right: 25%;
@@ -15,18 +19,12 @@
     box-shadow: 7px 13px 37px #000;
     width: 50%;
   }
-    .formContacto {
-      padding: map-get($margins, medium);
-      .margenesContacto {
-        margin-right: 80%;
-      }
 
+  .formContacto {
+    padding: map-get($margins, medium);
+
+    .margenesContacto {
+      margin-right: 80%;
     }
-
-    form textarea {
-      width: 100%;
-    }
-  
-
-
+  }
 }
